# trajectopy-web

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  nginx.conf  package-lock.json
trajectopy-api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
trajectopy-api/app/: dependencies.py  dtos.py  exceptions.py  expiration.py  main.py  middlewares.py  storage.py  utils.py
trajectopy-api/app/database/: __init__.py  models.py
trajectopy-api/app/database/crud/: result.py  session.py  trajectory.py
trajectopy-api/app/database/schemas/: result.py  session.py  settings.py  trajectory.py
trajectopy-api/app/repository/: __init__.py  models.py  result.py  session.py  trajectory.py
trajectopy-api/app/router/: results.py  sessions.py  settings.py  trajectories.py
trajectopy-api/app/routers/: results.py  sessions.py  settings.py  trajectories.py
trajectopy-api/app/service/: result.py  session.py  trajectory.py
trajectopy-api/app/storage/: protocol.py  storage_protocol.py
trajectopy-api/app/storage/backends/: azure.py  local.py
trajectopy-react/: Dockerfile  package-lock.json  package.json
trajectopy-react/public/: index.html  manifest.json
trajectopy-react/src/: App.css  App.js  AppContent.js  api.js  settings.js  utils.js
trajectopy-react/src/components/: Base.css  Base.js  CanvasPlotView.css  CanvasPlotView.js  Compare.js  ErrorModal.js  FileContainer.css  FileContainer.js  FileUpload.css  FileUpload.js  Footer.css  Footer.js  Header.css  Header.js  LeafletView.js  MapView.css  MapView.js  (+10 more)
