[tool.poetry]
name = "trajectopy-api"
version = "0.1.0"
description = "Web API for trajectory evaluation"
authors = ["Gereon Tombrink <tombrink@igg.uni-bonn.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trajectopy_api"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
trajectopy-core = "^3.0.1"
azure-core = "^1.30.1"
azure-identity = "^1.16.0"
azure-storage-blob = "^12.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
